--- a/css/style.css
+++ b/css/style.css
@@ -500,7 +500,7 @@ input[type=text]{
     text-decoration: none;
 }
 #slider_2 .owl-item.active{
-    width: 100%;
+    width: auto;
     height: 100%;
     transform: scale(1);
     opacity: 0.4;
