--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,7 @@ header {
      background-image: linear-gradient(45deg,rgba(95, 196, 180, 0.75) 75%,rgba(95,196,180,0.75)), url("/img/bgr3.png");
      background-size: cover;
      padding: 0px;
+     left: 30%;
      margin-left: 30%;
 
   }
@@ -138,6 +139,7 @@ header {
     background-image: linear-gradient(45deg,rgba(148, 91, 159, 0.75) 75%,rgba(148, 91, 159, 0.75)), url("/img/bgr4.png");
     background-size: cover;
     padding: 0px;
+    left: 30%;
     margin-left: 30%;
     
  }
@@ -146,6 +148,7 @@ header {
     background-image: linear-gradient(45deg,rgba(142, 204, 59, 0.75) 75%,rgba(142, 204, 59, 0.75)), url("/img/bgr5.png");
     background-size: cover;
     padding: 0px;
+    left: 30%;
     margin-left: 30%;
     
  }
