up button slider

--- a/css/style.css
+++ b/css/style.css
@@ -511,3 +511,13 @@ input[type=text]{
     height: 100%;
     width: 100%;
 }
+#slider_2 .owl-nav button.owl-prev{
+    position: relative;
+    margin-left: -3%;
+    top: -250px;
+}
+#slider_2 .owl-nav button.owl-next{
+    position: relative;
+    margin-left: 70%;
+    top: -250px;
+}
