--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,7 @@ header {
 }
 .offer1{
     width: 70%;
+    height: 200px;
     background-image: linear-gradient(45deg,rgba(95, 196, 180, 0.75) 75%,rgba(95,196,180,0.75)), url("/img/bgr3.png");
     background-size: cover;
     padding: 0px;
@@ -143,12 +144,11 @@ header {
 }
 .our_clasess_gird{
     margin-top: 5%;
-    display: grid;
-    grid-template-columns: 33% 33% 33%;
 }
 .item_clasess{
     grid-column: span 1-of-3;
     position: relative;
+    height: 350px;
 }
 .txt_item_clasess{
     height: 15%;
@@ -339,4 +339,113 @@ input[type=text]{
 }
 .button_info button:hover{
     background-color:#FF1D6A ;
+}
+#slider_1 .owl-nav button.owl-prev{
+    position: relative;
+    margin-left: -3%;
+    top: -200px;
+}
+.trainer_grid_slider{
+    padding: 2%;
+}
+#slider_1 .owl-nav button.owl-next{
+    position: relative;
+    margin-left: 70%;
+    top: -200px;
+}
+#slider_1 .owl-item{
+    width: 100%;
+    height: 100%;
+}
+#slider_1 .owl-item img.item{
+    width: 270px;
+    height: 350px;
+}
+
+.classes_gallery {
+    margin: 20px 0px;
+}
+.classes_list {
+    display:grid;
+    grid-template-columns: repeat(3, 2fr);
+    grid-column-gap: 0px;
+    grid-row-gap:0px;
+}
+.classes_list_item {
+    position: relative;
+    margin-top: -5px;
+}
+.classes_list_item hr{
+    width: 15%;
+    margin: auto;
+    position: relative;
+    bottom: 6%;
+    border: 1px solid #FF1D6A
+    
+}
+.classes_list_overview {
+    position: absolute;
+    left: 50%;
+    bottom: 0px;
+    transform: translateX(-50%);
+    z-index: 0;
+    width: 100%;
+    padding: 8% 0px;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    background-color: rgba(19, 25, 26, 0.507);
+    font-size: 30px;
+    font-weight: 600;
+}
+.classes_list_item img {
+    width: 100%;
+    object-fit: cover;
+}
+.classes_hover {
+    position: absolute;
+    z-index: 0;
+    top: 11%;
+    left: 8%;
+    right: 8%;
+    bottom: 11%;
+    display: none;
+    cursor: pointer;
+    padding: 20px 20px;
+    text-align: center;
+    background-color: rgb(255, 29, 106);
+}
+.classes_hover_title {
+    color: rgb(255, 255, 255);
+    font-size: 30px;
+    font-weight: 600;
+    font-family:'Raleway', sans-serif;;
+}
+.classes_hover_title::after{
+    content: " ";
+    display: block;
+    width: 150px;
+    height: 1px;
+    margin: 25px auto;
+    background-color: rgb(255, 255, 255);
+}
+.classes_hover_overview {
+    color: rgb(255, 255, 255);
+    font-size: 20px;
+}
+.classes_hover_link {
+    display: inline-block;
+    margin-top: 11%;
+    padding: 10px 25px;
+    color:rgb(255, 108, 44);
+    background-color: rgb(255, 255, 255);
+    font-size: 18px;
+    text-decoration: none;
+    font-size: 18px;
+    text-transform: uppercase;
+    border-radius: 15px;
+    border: none;
+}
+.classes_list_item:hover section {
+    display: block ;
+    opacity: 0.86;
 }
