--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,9 @@
 }
 
 html{
-    font-family: 'Lato', sans-serif;
+    font-family: Raleway;
 
-    color: rgb(185, 182, 182);
+    color: #FFFFFF;
     background-color: #181A1F;
     text-rendering: optimizeLegibility;
     
@@ -43,7 +43,8 @@ header {
 }
 .menu{
     margin-left:30%;
-    width: 100%;
+    width: 46%;
+   
 }
 .menu_item{
     color: rgb(255, 255, 255);
@@ -104,7 +105,7 @@ header {
 }
 .offer1{
     width: 70%;
-    height: 200px;
+    height: 180px;
     background-image: linear-gradient(45deg,rgba(95, 196, 180, 0.75) 75%,rgba(95,196,180,0.75)), url("/img/bgr3.png");
     background-size: cover;
     padding: 0px;
@@ -235,18 +236,23 @@ header {
     padding: 5% 10%;
 }
 .blog_1_1{
+    color: #BBBBBB;
+    font: Arial;
     background: #13191A;
     margin-right: 2%;
     margin-left: 2%;
     padding: 3%;
 }
 .blog_1_2{
+    color: #BBBBBB;
+    font: Arial;
     background: #13191A;
     margin: 2%;
     margin-top: 4%;
     padding: 3%;
 }
 .blog_2_1{
+    color: #BBBBBB;
     background-color:  #13191A;
     display: grid;
     grid-template-columns: 50% 50%;
@@ -321,8 +327,8 @@ input[type=text]{
     padding: 2%;
     margin: 1%;
     background: none;
-    border: 2px solid white;
-    color: white;
+    border: 2px solid #BBBBBB;
+    color: #BBBBBB
 }
 .menu_end_1{
     background-color: #FF1D6A;
