--- a/calculator/style.css
+++ b/calculator/style.css
@@ -15,7 +15,7 @@
     background: black;
     border-radius: 20px;
     color: white;
-    height: 760px;
+    height: 900px;
     padding: 5px;
     position: relative;
     width: 500px;
@@ -29,10 +29,11 @@
   }
   
   .screen {
-    font-size: 130px;
+    font-size: 100px;
     font-weight: 300;
-    height: 158px;
-    margin-bottom: 20px;
+    width: 100%;
+    height: 300px;
+    padding-top: 150px;
     margin-right: 20px;
     text-align: right;
   }
@@ -64,4 +65,5 @@
     grid-column: 1 / span 2;
     justify-content: flex-start;
     width: 243px;
+    padding-left: 45%;
   }
